--- a/src/components/chart/Chart.module.scss
+++ b/src/components/chart/Chart.module.scss
@@ -3,6 +3,7 @@
     max-width: 500px;
     .card {
       padding: 1rem;
+      margin-bottom: 2rem;
       border: 1px solid #ccc;
       border-bottom: 3px solid var(--color-danger);
     }
