--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -1,6 +1,6 @@
 .slider {
     width: 100%;
-    height: 90vh;
+    height: 95vh;
     position: relative;
     overflow: hidden;
     background-color: var(--color-dark);
@@ -23,9 +23,19 @@
       height: 100%;
     }
   }
+  @media screen and (max-width: 600px) {
+    .slider{
+      height: 30vh;
+    }
+    .slide img {
+      width: 100%;
+      height: 100%;
+    }
+  }
   
   .slide img {
-    height: 100%;
+    height: auto;
+    object-fit: cover;
   }
   
   .content {
