--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -92,7 +92,7 @@
     opacity: 1;
   }
   .arrow {
-    border: 2px solid orangered;
+    border: none;
     border-radius: 50%;
     background: transparent;
     color: #fff;
