--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -1,11 +1,10 @@
 .slider {
-    width: 100%;
-    height: 90vh;
-    position: relative;
-    overflow: hidden;
-    background-color: var(--color-dark);
-  }
-  
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  overflow: hidden;
+  background-color: var(--color-dark);
+
   .slide {
     position: absolute;
     top: 0;
@@ -13,31 +12,29 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transform: translateX(-50%);
-    transition: all 0.5s ease;
-  }
-  
-  @media screen and (min-width: 600px) {
-    
-    .slide img {
-      width: 100%;
+    transition: opacity 0.5s ease;
+   
+
+    &.current {
+      opacity: 1;
+    }
+
+    img {
       height: 100%;
-    }
-  }
-  @media screen and (max-width: 600px) {
-    .slider{
-      height: 30vh;
-    }
-    .slide img {
       width: 100%;
-      height: 100%;
+      object-fit: cover;
+      
     }
   }
+}
+
   
-  .slide img {
-    height: auto;
-    object-fit: cover;
+@media screen and (max-width: 600px) {
+  .slider {
+    height: 30vh;
   }
+}
+ 
   
   .content {
     position: absolute;
