Textarea cannot be adjusted

--- a/src/pages/wishlist/Wishlist.module.scss
+++ b/src/pages/wishlist/Wishlist.module.scss
@@ -27,6 +27,9 @@
           }
         }
       }
+      textarea {
+        resize: none; 
+      }
     form {
       label {
         display: block;
