--- a/src/pages/contactUs/Contact.module.scss
+++ b/src/pages/contactUs/Contact.module.scss
@@ -3,6 +3,9 @@
       padding: 1rem;
       border: 1px solid #ccc;
     }
+    textarea{
+      resize: none;
+    }
   
     .card2 {
       padding: 2rem;
@@ -25,6 +28,7 @@
           }
         }
       }
+      
     }
   
     .section {
