--- a/src/components/product/productFilter/ProductFilter.module.scss
+++ b/src/components/product/productFilter/ProductFilter.module.scss
@@ -55,5 +55,5 @@
     bottom: 0;
     width: 2px;
     height: 100%;
-    background-color: var(--color-danger);
+    background-color: #760700;
   }
