--- a/src/components/product/productList/ProductList.module.scss
+++ b/src/components/product/productList/ProductList.module.scss
@@ -14,6 +14,7 @@
         & > * {
           margin-right: 7px;
           cursor: pointer;
+        color: #760700;
         }
       }
   
@@ -22,6 +23,7 @@
           font-size: 1.4rem;
           font-weight: 500;
           margin: 0 5px;
+          color: #760700;
         }
         select {
           font-size: 1.6rem;
