--- a/src/pages/contactUs/Contact.module.scss
+++ b/src/pages/contactUs/Contact.module.scss
@@ -9,7 +9,7 @@
   
     .card2 {
       padding: 2rem;
-      background-color: var(--light-blue);
+      background-color: #760700;
       color: #fff;
       h3,
       p {
@@ -44,6 +44,7 @@
           display: block;
           font-size: 1.4rem;
           font-weight: 500;
+          color: #760700;
         }
         input[type="text"],
         input[type="number"],
