--- a/src/pages/wishlist/Wishlist.module.scss
+++ b/src/pages/wishlist/Wishlist.module.scss
@@ -35,6 +35,7 @@
         display: block;
         font-size: 1.4rem;
         font-weight: 500;
+        color: #760700;
       }
       input[type="text"],
       input[type="number"],
