--- a/src/components/admin/viewProducts/ViewProducts.module.scss
+++ b/src/components/admin/viewProducts/ViewProducts.module.scss
@@ -2,6 +2,7 @@
     padding: 5px;
     width: 100%;
     overflow-x: auto;
+    color: #760700;
   
     .search {
       width: 100%;
@@ -14,8 +15,8 @@
       font-size: 1.4rem;
   
       thead {
-        border-top: 2px solid var(--light-blue);
-        border-bottom: 2px solid var(--light-blue);
+        border-top: 2px solid #760700;
+        border-bottom: 2px solid #760700;
       }
   
       th {
