--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,7 +3,20 @@
     position: fixed;
     top: 0;
     transition: all 0.5s;
-    z-index: 9;
+    // z-index: 9;
+    right: 0;
+    background-color: #fdca0f;
+    color: #fff;
+    padding: 8px 12px;
+    display: flex;
+    align-items: center;
+    border-radius: 50px 0 0 50px;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+.header-fixed-cart p {
+  margin-left: 8px;
   }
   
   header {
@@ -123,7 +136,7 @@
         z-index: 999;
         transform: translateX(-200%);
         transition: all 0.3s;
-  
+
         .nav-wrapper {
           position: absolute;
           top: 0;
@@ -161,18 +174,18 @@
         .header-right {
           display: block;
           .cart {
-            // display: block;
-            // padding: 5px 0;
+            display: block;
+            padding: 5px 0;
             border-bottom: 1px solid #333;
-            // a {
-            //   position: relative;
-            //   p {
-            //     position: absolute;
-            //     top: -1rem;
-            //     left: 5rem;
-            //     font-weight: 500;
-            //   }
-            // }
+            a {
+              position: relative;
+              p {
+                position: absolute;
+                top: -1rem;
+                left: 5rem;
+                font-weight: 500;
+              }
+            }
           }
   
           .links {
@@ -205,6 +218,7 @@
           }
         }
       }
+
       .show-nav {
         transform: translateX(0);
       }
