--- a/src/components/checkoutForm/CheckoutForm.module.scss
+++ b/src/components/checkoutForm/CheckoutForm.module.scss
@@ -14,6 +14,7 @@
     form {
       width: 100%;
       display: flex;
+      color: #760700;
   
       div {
         width: 100%;
@@ -68,7 +69,7 @@
   
   /* Buttons and links */
   .button {
-    background: #5469d4;
+    background: #f6c500; // checkout summary
     font-family: Arial, sans-serif;
     color: #ffffff;
     border-radius: 4px;
