--- a/src/components/checkoutSummary/CheckoutSummary.module.scss
+++ b/src/components/checkoutSummary/CheckoutSummary.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 500px;
     padding: 1rem;
-    border: 1px solid var(--light-blue);
+    border: 1px solid #760700;
     margin-bottom: 5px;
   }
   h3 {
@@ -14,6 +14,6 @@
     justify-content: space-between;
     align-items: center;
     h3 {
-      color: var(--color-danger);
+      color: #ddb412;
     }
   }
