--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,16 +1,16 @@
 .fixed {
     width: 100%;
-    position: fixed;
+    // position: fixed;
     top: 0;
     transition: all 0.5s;
-    // z-index: 9;
+    z-index: 9;
     right: 0;
-    color: #fff;
-    padding: 8px 12px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    z-index: 10;
+    // color: #fff;
+    // padding: 8px 12px;
+    // display: flex;
+    // align-items: center;
+    // cursor: pointer;
+    // z-index: 10;
   }
 
 .header-fixed-cart p {
@@ -55,7 +55,8 @@
           display: none;
           
         }
-  
+        
+        // To adjust Home, Contact us, Wishlist, and admin space bet
         li {
           margin: 0 5px;
           a {
