--- a/src/pages/checkout/CheckoutDetails.module.scss
+++ b/src/pages/checkout/CheckoutDetails.module.scss
@@ -23,6 +23,7 @@
       display: block;
       font-size: 1.4rem;
       font-weight: 500;
+      color: #760700;
     }
     input[type="text"],
     .select,
