--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -2,12 +2,15 @@
       margin: 5px 0;
       position: relative;
       flex: 1;
+      
   
       .icon {
         position: absolute;
         top: 50%;
         left: 1rem;
         transform: translateY(-50%);
+        color: #dc0000;
+       
       }
   
       input[type="text"] {
@@ -18,8 +21,8 @@
         padding-left: 3rem;
         margin: 1rem auto;
         width: 100%;
-        border: 1px solid #777;
-        border-radius: 3px;
+        border: 1.5px solid #777;
+        border-radius: 50px;
         outline: none;
       }
     }
