--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -34,10 +34,11 @@
       position: relative;
     }
     .logo img {
-      width: 20%;
+      width: 100%;
       height: auto;
       object-fit: contain;
       cursor: pointer;
+      max-height: 120px;
       
     }
     
@@ -80,7 +81,7 @@
           color: #fdca0f;
         }
         &.active {
-          color: var(--color-danger);
+          color: #fdca0f;
         }
         p {
           position: absolute;
@@ -102,10 +103,10 @@
         margin: 0 5px;
         color: #fff;
         &:hover {
-          color: orangered;
+          color: #fdca0f;
         }
         &.active {
-          color: var(--color-danger);
+          color: #fdca0f;
         }
       }
     }
@@ -116,11 +117,8 @@
     }
   
     @media screen and (max-width: 800px) {
-      .logo img{
-        width: 25%;
-        height: auto;
-        object-fit: contain;
-        cursor: pointer;
+      .logo img {
+        max-height: 60px; 
       }
 
       nav {
@@ -206,7 +204,7 @@
           color: #fff;
           position: relative;
           &:hover {
-            color: orangered;
+            color: #fdca0f;
           }
           p {
             position: absolute;
@@ -235,7 +233,7 @@
   
   .active {
     position: relative;
-    color: var(--color-danger);
+    color: #daa51f;
   }
   
   .active::after {
