--- a/src/components/pagination/Pagination.module.scss
+++ b/src/components/pagination/Pagination.module.scss
@@ -15,6 +15,7 @@
     
     li {
       font-size: 1.4rem;
+      font-weight: 500;
       border: 1px solid #ccc;
       min-width: 3rem;
       height: 3rem;
@@ -30,13 +31,13 @@
       margin-left: 1rem;
     
       .page {
-        color: #760700;
+        color: #dc0000;
       }
     }
   }
   .active {
-    background-color: #760700;
-    // color: #fff;
-    color: #d7a900;
+    background-color: #dc0000;
+    color: #fff;
+    
     
   }
