--- a/src/components/product/productDetails/ProductDetails.module.scss
+++ b/src/components/product/productDetails/ProductDetails.module.scss
@@ -26,7 +26,7 @@
           margin-bottom: 1rem;
         }
         .price {
-          color: orangered;
+          color: #dc0000;
           font-weight: 500;
         }
   
