--- a/src/components/product/productList/ProductList.module.scss
+++ b/src/components/product/productList/ProductList.module.scss
@@ -14,20 +14,20 @@
         & > * {
           margin-right: 7px;
           cursor: pointer;
-        color: #760700;
+        color: #dc0000;
         }
       }
   
       .sort {
         label {
-          font-size: 1.4rem;
-          font-weight: 500;
+          font-size: 1.6rem;
+          font-weight: 600;
           margin: 0 5px;
-          color: #760700;
+          color: #dc0000;
         }
         select {
           font-size: 1.6rem;
-          font-weight: 300;
+          font-weight: 500;
           border: none;
           // border-bottom: 1px solid #777;
           outline: none;
