--- a/src/pages/wishlist/Wishlist.module.scss
+++ b/src/pages/wishlist/Wishlist.module.scss
@@ -53,6 +53,10 @@
         border: 1px solid #777;
         border-radius: 3px;
         outline: none;
+        color: #000000;
+      }
+      h5 {
+        color: #000000;
       }
     }
   }
