--- a/src/components/product/productDetails/ProductDetails.module.scss
+++ b/src/components/product/productDetails/ProductDetails.module.scss
@@ -26,7 +26,7 @@
           margin-bottom: 1rem;
         }
         .price {
-          color: #dc0000;
+          color: #97180f;
           font-weight: 500;
         }
   
@@ -37,9 +37,51 @@
             margin-right: 1rem;
           }
         }
+
+        .colorButtons {
+          display: flex;
+          flex-wrap: wrap;
+          margin-top: 5px;
+        
+
+          .colorButton {
+            margin-right: 5px;
+            margin-bottom: 5px;
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: transparent;
+            cursor: pointer;
+
+            &.active {
+              background-color: #97180f;
+              color: #fff;
+            } 
+          }
+        }
+
+        .sizeButtons {
+          display: flex;
+          flex-wrap: wrap;
+          margin-top: 5px;
+  
+          .sizeButton {
+            margin-right: 5px;
+            margin-bottom: 5px;
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: transparent;
+            cursor: pointer;
+
+            &.active {
+              background-color: #97180f;
+              color: #fff;
+            }
+          }
+        }
       }
     }
-  }
   
   @media screen and (max-width: 700px) {
     .product {
@@ -56,3 +98,4 @@
       }
     }
   }
+}
