--- a/src/index.css
+++ b/src/index.css
@@ -323,6 +323,13 @@ p {
   background: #760700;
 }
 
+.--btn-primary4 {
+  color: #fff;
+  background: #760700;
+  font-weight: 600;
+  font-size: 16px;
+};
+
 .--btn-secondary {
   color: #fff;
   border: 1px solid #fff;
