--- a/src/pages/orderDetails/OrderDetails.module.scss
+++ b/src/pages/orderDetails/OrderDetails.module.scss
@@ -9,8 +9,8 @@
       font-size: 1.4rem;
   
       thead {
-        border-top: 2px solid var(--light-blue);
-        border-bottom: 2px solid var(--light-blue);
+        border-top: 2px solid #760700;
+        border-bottom: 2px solid #760700;
       }
   
       th {
@@ -32,10 +32,50 @@
   
       tr {
         border-bottom: 1px solid #ccc;
+        color: #000000;
       }
   
       tr:nth-child(even) {
         background-color: #eee;
+      }
+
+      .actionButtons {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    
+        a,
+        button {
+          padding: 0.5rem 1rem;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          font-size: 1.2rem;
+          text-decoration: none;
+          transition: background-color 0.3s;
+          color: #fff;
+          width: 150px;
+    
+          // extra
+          &:hover {
+            filter: brightness(90%);
+          }
+        }
+    
+        // Review Product button
+        .reviewButton {
+          background-color: #ffca00;
+        }
+    
+        // Return Product button
+        .returnButton {
+          background-color: #dc3545;
+        }
+    
+        // Track Order button
+        .trackButton {
+          background-color: #28a745;
+        }
       }
     }
     .summary {
