--- a/src/components/admin/orderDetails/OrderDetails.module.scss
+++ b/src/components/admin/orderDetails/OrderDetails.module.scss
@@ -9,8 +9,8 @@
       font-size: 1.4rem;
   
       thead {
-        border-top: 2px solid var(--light-blue);
-        border-bottom: 2px solid var(--light-blue);
+        border-top: 2px solid #760700;
+        border-bottom: 2px solid #760700;
       }
   
       th {
@@ -32,6 +32,7 @@
   
       tr {
         border-bottom: 1px solid #ccc;
+        color: #000000;
       }
   
       tr:nth-child(even) {
