--- a/src/pages/orderDetails/OrderDetails.module.scss
+++ b/src/pages/orderDetails/OrderDetails.module.scss
@@ -48,14 +48,14 @@
       button {
         padding: 0.5rem 1rem;
         border: none;
-        border-radius: 5px;
+        border-radius: 20px;
         cursor: pointer;
         font-size: 1.2rem;
         text-decoration: none;
         transition: background-color 0.3s;
         color: #fff;
         width: 150px;
-  
+
         // extra
         &:hover {
           filter: brightness(90%);
@@ -65,16 +65,22 @@
       // Review Product button
       .reviewButton {
         background-color: #ffca00;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.38);
+
       }
   
       // Return Product button
       .returnButton {
         background-color: #dc3545;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.38);
+
       }
   
       // Track Order button
       .trackButton {
         background-color: #28a745;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.38);
+
       }
     }
   }
