--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -103,16 +103,17 @@
   }
   
   .arrow:hover {
-    background: #fff;
+    background: #ffffffa5;
+    color: rgb(176, 0, 0);
   }
   
   .next {
     right: 1.5rem;
-    color: orangered;
+    color: #760700;
   }
   .prev {
     left: 1.5rem;
-    color: orangered;
+    color: #760700;
   }
   
   hr {
