--- a/src/components/checkoutForm/CheckoutForm.module.scss
+++ b/src/components/checkoutForm/CheckoutForm.module.scss
@@ -11,7 +11,7 @@
       }
     }
   
-    form {
+    .checkoutForm {
       width: 100%;
       display: flex;
       color: #760700;
@@ -43,7 +43,7 @@
   
   @media screen and (max-width: 700px) {
     .checkout {
-      form {
+      .checkoutForm {
         flex-direction: column;
         div {
           width: 100%;
@@ -95,7 +95,7 @@
   }
   
   @media only screen and (max-width: 600px) {
-    form {
+    .checkoutForm {
       width: 80vw;
       min-width: initial;
     }
