--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --color-dark: #333;
 
   --color-grey: #eee;
-  --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
 
   --color-purple: #9d0191;
   --color-orange: #ff7722;
@@ -328,7 +328,29 @@ p {
   background: #760700;
   font-weight: 600;
   font-size: 16px;
-};
+}
+.--btn-google {
+  color: #5d5e5e;
+  background: #fff;;
+  border: 1px solid #c2c3c3;
+  font-weight: 600;
+  margin: 0.5em 0;
+}
+.--btn-signUp {
+  color: white;
+  background: #fb8538;
+}
+.--btn-reset {
+  color: white;
+  background: #e0b83d;
+}
+ 
+.--btn-Login{
+  color: #fff;
+  background: #dc0000;
+  margin: 1em 0;
+}
+
 
 .--btn-secondary {
   color: #fff;
