Fixed Issue on Responsive

--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -293,7 +293,7 @@
   }
   
   @media screen and (max-width: 700px) {
-    img {
+    .imgSignUp, .imgLogin , .imgReset {
       display: none;
     }
 
