--- a/src/pages/wishlist/Wishlist.module.scss
+++ b/src/pages/wishlist/Wishlist.module.scss
@@ -3,8 +3,19 @@ section{
   justify-content: center;
   align-items: center;
 }
+.container {
+  /* Your container styles here */
+  /* ... */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .wishlist {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
     .card {
+      
       width: 100%;
       max-width: 500px;
       padding: 1rem;
@@ -63,6 +74,52 @@ section{
         .fileInput {
           display: none;
         }
+        .wishlistImage {
+          /* Your image grid styles here */
+          /* ... */
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+        
+          div {
+            /* Adjust the size of the image containers here */
+            width: 108px;
+            height: 108px;
+            margin: 4px;
+          }
+        
+          img {
+            /* Adjust the size of the images here */
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        .wishlistLabel{
+          width: 100%;
+        }
+        .centeredImage {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 300px; /* Set a fixed height for the single image container */
+          overflow: hidden; /* Hide any overflowing content (image) within the div */
+          text-align: center;
+        }
+        .centered-content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          
+        }
+        
+        .centeredImage img {
+          width: auto;
+          height: 100%;
+          object-fit: cover;
+          object-position: center; /* Center the image within the container */
+        }
+        
       }
       textarea {
         resize: none; 
@@ -93,8 +150,10 @@ section{
         outline: none;
         color: #000000;
       }
+      
       h5 {
         color: #000000;
       }
     }
   }
+  
