Try right side wishlist

--- a/src/pages/wishlist/Wishlist.module.scss
+++ b/src/pages/wishlist/Wishlist.module.scss
@@ -78,6 +78,7 @@ section{
         .iconTextContainer {
           display: flex;
           align-items: center;
+          justify-content: space-between;
           gap: 0.5rem;
         }
 
