--- a/src/components/chart/Chart.module.scss
+++ b/src/components/chart/Chart.module.scss
@@ -5,6 +5,6 @@
       padding: 1rem;
       margin-bottom: 2rem;
       border: 1px solid #ccc;
-      border-bottom: 3px solid var(--color-danger);
+      border-bottom: 3px solid #760700;
     }
   }
